# autosummarize

./: .dir-locals.el  .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac
src/: KeywordExtractor.cpp  KeywordExtractor.hpp  Main.cpp  Sentence.cpp  Sentence.hpp  Sparsetence.cpp  Sparsetence.hpp  SparsetenceFactory.cpp  SparsetenceFactory.hpp  TextRank.cpp  TextRank.hpp
src/.deps/: Main.Po  Sentence.Po
test/: Main.cpp  SentenceTest.cpp  SentenceTest.hpp
